refactor: update user metadata handling and improve initialization logic

--- a/src/app/pages/profile/following/following.component.html
+++ b/src/app/pages/profile/following/following.component.html
@@ -47,7 +47,7 @@
         } @else {
           <mat-list class="following-list">
             @for (user of followingList(); track user.id) {
-              <mat-list-item class="following-item" (click)="layout.navigateToProfile(user.npub)">
+              <!-- <mat-list-item class="following-item" (click)="layout.navigateToProfile(user.npub)">
                 <div class="following-item-avatar" matListItemAvatar>
                   @if (user.picture) {
                     <img [src]="user.picture" alt="{{ user.name }}'s profile picture">
@@ -57,9 +57,9 @@
                 </div>
                 <div matListItemTitle>{{ user.name }}</div>
                 <div matListItemLine class="following-item-npub">{{ user.npub }}</div>
-              </mat-list-item>
+              </mat-list-item> -->
 
-              <app-user-profile [npub]="user.npub"></app-user-profile>
+              <app-user-profile [pubkey]="user.npub"></app-user-profile>
 
             }
           </mat-list>
