feat: add upgrade component for premium subscription with multi-step payment process

--- a/src/app/pages/premium/premium.component.html
+++ b/src/app/pages/premium/premium.component.html
@@ -4,7 +4,7 @@
     <p class="premium-subtitle">Unlock the full potential of your Nostr experience</p>
     
     <div class="cta-container">
-      <button mat-raised-button color="primary" class="premium-cta-button">
+      <button mat-raised-button color="primary" class="premium-cta-button" [routerLink]="['/premium/upgrade']">
         <mat-icon>stars</mat-icon>
         Upgrade to Premium
       </button>
