feat: enhance typography and layout with new font styles and size adjustments

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -7,11 +7,13 @@
 }
 
 h1 {
-  font: var(--mat-sys-display-large);
+  // font: var(--mat-sys-display-large);
+  font-size: 4em;
 }
 
 h2 {
-  font: var(--mat-sys-headline-medium);
+  // font: var(--mat-sys-headline-medium);
+  font-size: 2.4em;
 }
 
 // Hero section
