--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,9 @@
       <mat-icon>menu</mat-icon>
     </button>
     <img src="icons/icon-128x128.png" class="app-icon hide-tiny" alt="Nostria icon">
-    <span class="app-title hide-small">{{title}}</span>
+    <span class="app-title title-font hide-small">
+        {{title}}
+    </span>
 
     <span class="toolbar-spacer">
         @if (layout.search()) {
