feat: add styling for username preview with margin and padding adjustments

--- a/src/app/pages/premium/upgrade/upgrade.component.scss
+++ b/src/app/pages/premium/upgrade/upgrade.component.scss
@@ -433,4 +433,10 @@ h2 {
       width: 100%;
     }
   }
+
+  .username-preview {
+    margin-top: 1rem;
+    font-size: 1.6rem;
+    padding: 0.8rem;
+  }
 }
