--- a/src/app/pages/profile/following/following.component.html
+++ b/src/app/pages/profile/following/following.component.html
@@ -45,24 +45,17 @@
             <p>This user is not following anyone.</p>
           </div>
         } @else {
-          <mat-list class="following-list">
-            @for (user of followingList(); track user.id) {
-              <!-- <mat-list-item class="following-item" (click)="layout.navigateToProfile(user.npub)">
-                <div class="following-item-avatar" matListItemAvatar>
-                  @if (user.picture) {
-                    <img [src]="user.picture" alt="{{ user.name }}'s profile picture">
-                  } @else {
-                    <mat-icon class="default-user-avatar">account_circle</mat-icon>
-                  }
-                </div>
-                <div matListItemTitle>{{ user.name }}</div>
-                <div matListItemLine class="following-item-npub">{{ user.npub }}</div>
-              </mat-list-item> -->
-
-              <app-user-profile [pubkey]="user.npub"></app-user-profile>
-
-            }
-          </mat-list>
+          <cdk-virtual-scroll-viewport 
+            class="virtual-scroll-viewport" 
+            [itemSize]="itemSize"
+            [minBufferPx]="minBufferPx" 
+            [maxBufferPx]="maxBufferPx">
+            <mat-list>
+              @for (user of followingList(); track user.id) {
+                <app-user-profile [pubkey]="user.npub"></app-user-profile>
+              }
+            </mat-list>
+          </cdk-virtual-scroll-viewport>
         }
       </div>
     </mat-tab>
@@ -75,21 +68,27 @@
             <p>No mutual connections found.</p>
           </div>
         } @else {
-          <mat-list class="following-list">
-            @for (user of mutualConnectionsList(); track user.id) {
-              <mat-list-item class="following-item" (click)="layout.navigateToProfile(user.npub)">
-                <div class="following-item-avatar" matListItemAvatar>
-                  @if (user.picture) {
-                    <img [src]="user.picture" alt="{{ user.name }}'s profile picture">
-                  } @else {
-                    <mat-icon class="default-user-avatar">account_circle</mat-icon>
-                  }
-                </div>
-                <div matListItemTitle>{{ user.name }}</div>
-                <div matListItemLine class="following-item-npub">{{ user.npub }}</div>
-              </mat-list-item>
-            }
-          </mat-list>
+          <cdk-virtual-scroll-viewport 
+            class="virtual-scroll-viewport" 
+            [itemSize]="itemSize"
+            [minBufferPx]="minBufferPx" 
+            [maxBufferPx]="maxBufferPx">
+            <mat-list>
+              @for (user of mutualConnectionsList(); track user.id) {
+                <mat-list-item class="following-item" (click)="layout.navigateToProfile(user.npub)">
+                  <div class="following-item-avatar" matListItemAvatar>
+                    @if (user.picture) {
+                      <img [src]="user.picture" alt="{{ user.name }}'s profile picture">
+                    } @else {
+                      <mat-icon class="default-user-avatar">account_circle</mat-icon>
+                    }
+                  </div>
+                  <div matListItemTitle>{{ user.name }}</div>
+                  <div matListItemLine class="following-item-npub">{{ user.npub }}</div>
+                </mat-list-item>
+              }
+            </mat-list>
+          </cdk-virtual-scroll-viewport>
         }
       </div>
     </mat-tab>
