feat: improve user profile loading state management and enhance UI responsiveness

--- a/src/app/pages/profile/following/following.component.html
+++ b/src/app/pages/profile/following/following.component.html
@@ -50,7 +50,7 @@
             [itemSize]="itemSize"
             [minBufferPx]="minBufferPx" 
             [maxBufferPx]="maxBufferPx">
-            <mat-list>
+            <mat-list class="full-width-list">
               @for (user of followingList(); track user.id) {
                 <app-user-profile [pubkey]="user.npub"></app-user-profile>
               }
