--- a/src/app/pages/profile/user-profile/user-profile.component.html
+++ b/src/app/pages/profile/user-profile/user-profile.component.html
@@ -1,22 +1,21 @@
 <mat-list-item class="user-profile" (click)="layout.navigateToProfile(pubkey())">
     <div class="user-profile-avatar" matListItemAvatar>
-        @if (profile()?.content?.picture) {
-        <img [src]="profile().content.picture" onerror="this.onerror=null; this.src='images/picture-failure.png';" alt="User Avatar" class="user-avatar" />
-        } @else if (profile()?.content?.nip05) {
+        @if (isLoading()) {
+            <mat-spinner diameter="40" color="primary"></mat-spinner>
+        } @else if (profile()?.content?.picture) {
+            <img [src]="profile().content.picture" onerror="this.onerror=null; this.src='images/picture-failure.png';" alt="User Avatar" class="user-avatar" />
         } @else {
-        <mat-icon class="default-user-avatar">account_circle</mat-icon>
+            <mat-icon class="default-user-avatar">account_circle</mat-icon>
         }
     </div>
     <div matListItemTitle>
-        @if(isLoading()) {
-        <mat-spinner diameter="20" color="primary"></mat-spinner>
-        } @else if (error()) {
-        <mat-icon>error</mat-icon> Error loading user profile
-        } @else if (profile()) {
-        @if (profile().content.display_name) {{{ profile().content.display_name }}} @else if (profile().content.name)
-        {{{ profile().content.name }}} @else {[No name]}
+        @if (error()) {
+            <mat-icon>error</mat-icon> Error loading user profile
+        } @else if (profile() && !profile().isEmpty && profile().content) {
+            @if (profile().content.display_name) {{{ profile().content.display_name }}} @else if (profile().content.name)
+            {{{ profile().content.name }}} @else {[No name]}
         } @else {
-        [Not found]
+            [Not found]
         }
     </div>
     <div matListItemLine class="following-item-npub">{{ npub() }}</div>
