feat: update styling for profile and following components with layout adjustments and border enhancements

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -74,10 +74,13 @@ nav {
 
 .content-wrapper {
   // padding: 1rem;
-  box-sizing: border-box;
+  // box-sizing: border-box;
+  // height: 100%;
+  // overflow-y: auto;
+  // overflow-x: hidden;
+  border: 2px solid red;
   height: 100%;
-  overflow-y: auto;
-  overflow-x: hidden; /* Prevent horizontal scrolling */
+  box-sizing: border-box;
 }
 
 mat-nav-list .mat-icon {
